--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
   },
   "author": "dvpnt",
   "license": "MIT",
+  "dependencies": {
+    "webpack-sources": "^1.4.3"
+  },
+  "peerDependencies": {
+    "webpack": "^4.4.0 || ^5.0.0"
+  },
   "devDependencies": {
-    "eslint": "6.8.0",
-    "eslint-config-dvpnt": "4.0.8",
-    "eslint-plugin-import": "2.22.0"
+    "eslint": "7.11.0",
+    "eslint-config-dvpnt": "5.0.6",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-node": "11.1.0",
+    "webpack": "5.1.3"
   }
 }
